<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <fragment
            android:id="@+id/map"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <ProgressBar android:id="@+id/prgb_main"
                 style="@style/Widget.AppCompat.ProgressBar"
                 android:visibility="gone"
                 android:indeterminate="false"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

    <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp">

        <ImageView
                android:id="@+id/iv_icon"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ProgressBar android:id="@+id/prgb_icon"
                     style="@style/Widget.AppCompat.ProgressBar"
                     android:visibility="gone"
                     android:indeterminate="false"
                     android:layout_centerInParent="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/ll_info"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true">

        <RelativeLayout
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@color/main_transparent_black_light"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/tv_sunrise"
                    android:text="@string/sunrise"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_sunset"
                    android:text="@string/sunset"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/tv_sunrise"
                    android:layout_toEndOf="@+id/tv_sunrise"/>

            <TextView
                    android:id="@+id/tv_main_weather"
                    android:text="@string/main_weather"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sunset"/>

            <TextView
                    android:id="@+id/tv_weather_description"
                    android:text="@string/weather_description"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_main_weather"/>

            <TextView
                    android:id="@+id/tv_pressure"
                    android:text="@string/pressure"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_weather_description"/>

            <TextView
                    android:id="@+id/tv_sea_level"
                    android:text="@string/sea_level"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_pressure"/>

            <TextView
                    android:id="@+id/tv_grnd_level"
                    android:text="@string/grnd_level"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_sea_level"/>

        </RelativeLayout>

        <RelativeLayout
                android:layout_weight="1"
                android:padding="10dp"
                android:background="@color/main_transparent_black_light"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/tv_city"
                    android:text="@string/tv_city"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_humidity"
                    android:text="@string/humidity"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_city"/>

            <TextView
                    android:id="@+id/tv_wind"
                    android:text="@string/wind"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_humidity"/>

            <TextView
                    android:id="@+id/tv_speed"
                    android:text="@string/speed"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_wind"/>

            <TextView
                    android:id="@+id/tv_deg"
                    android:text="@string/deg"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tv_speed"
                    android:layout_toRightOf="@+id/tv_speed"
                    android:layout_toEndOf="@+id/tv_speed"/>

            <TextView
                    android:id="@+id/tv_temp"
                    android:text="@string/temp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_speed"/>
            <TextView
                    android:id="@+id/tv_temp_min"
                    android:text="@string/temp_min"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_temp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>
            <TextView
                    android:id="@+id/tv_temp_max"
                    android:text="@string/temp_max"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_temp_min"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>


        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>